@@ -22,6 +22,8 @@ Fixed ZRCP bugs:
 Fixed rom loading: no more cpu panic when the rom is not found 
 Fixed esxdos handler segfaults when using a file handler that was a directory
 
+Fixed SCF/CCF undocumented flags emulation. Not enabled by default on configure as almost no one is using this
+
 
 Version 8.1.1 - The Great Escape edition. 2 March 2020
 
